# core-projection-architecture

./: .gitignore  LICENSE  README.md  README_en.md  cpa_thesis_00.md  cpa_thesis_01.md  cpa_thesis_02.md  cpa_thesis_03.md  cpa_thesis_04.md  cpa_thesis_05.md  cpa_thesis_06.md  cpa_thesis_07.md  cpa_thesis_08.md  cpa_thesis_09.md  cpa_thesis_10.md  cpa_thesis_appendix_a.md  cpa_thesis_appendix_a_en.md  cpa_thesis_appendix_b.md  cpa_thesis_appendix_b_en.md  cpa_thesis_appendix_c.md  cpa_thesis_appendix_c_en.md
cpa_thesis_appendix_B/: appendix_b_00.md  appendix_b_01.md  appendix_b_02.md  appendix_b_03.md  (+7 more)
cpa_thesis_appendix_B/01_cpa-semantic/: CHANGELOG.md  LICENSE  cpa-semantic.cabal
cpa_thesis_appendix_B/01_cpa-semantic/src/CPA/Semantic/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/01_cpa-semantic/src/CPA/Semantic/CoreModel/: Type.hs
cpa_thesis_appendix_B/01_cpa-semantic/src/CPA/Semantic/ProjectedContext/: Context.hs
cpa_thesis_appendix_B/01_cpa-semantic/test/CPA/Semantic/ApplicationBase/: ControlSpec.hs
cpa_thesis_appendix_B/02_cpa-ontological/: CHANGELOG.md  cpa-ontological.cabal
cpa_thesis_appendix_B/02_cpa-ontological/src/CPA/Ontological/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/02_cpa-ontological/src/CPA/Ontological/CoreModel/: Type.hs
cpa_thesis_appendix_B/02_cpa-ontological/src/CPA/Ontological/ProjectedContext/: Context.hs
cpa_thesis_appendix_B/02_cpa-ontological/test/CPA/Ontological/ApplicationBase/: ControlSpec.hs
cpa_thesis_appendix_B/04_cpa-application-state/: CHANGELOG.md  cpa-application-state.cabal
cpa_thesis_appendix_B/04_cpa-application-state/src/CPA/Application/State/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/04_cpa-application-state/src/CPA/Application/State/ApplicationBase/State/: Run.hs  Start.hs  Stop.hs
cpa_thesis_appendix_B/04_cpa-application-state/src/CPA/Application/State/CoreModel/: TH.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/04_cpa-application-state/test/CPA/Application/State/ApplicationBase/: ControlSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/ApplicationBase/cpa-fractal-app/: CHANGELOG.md  cpa-fractal-app.cabal
cpa_thesis_appendix_B/05_cpa-fractal/ApplicationBase/cpa-fractal-app/src/CPA/Fractal/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/05_cpa-fractal/ApplicationBase/cpa-fractal-app/src/CPA/Fractal/CoreModel/: Constant.hs  TH.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/ApplicationBase/cpa-fractal-app/src/CPA/Fractal/ProjectedContext/: Context.hs
cpa_thesis_appendix_B/05_cpa-fractal/ApplicationBase/cpa-fractal-app/test/CPA/Fractal/ApplicationBase/: ControlSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/Boot/cpa-bootstrap/: CHANGELOG.md  cabal.project  cpa-bootstrap.cabal
cpa_thesis_appendix_B/05_cpa-fractal/Boot/cpa-bootstrap/app/: Main.hs
cpa_thesis_appendix_B/05_cpa-fractal/Boot/cpa-bootstrap/src/CPA/Bootstrap/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/05_cpa-fractal/Boot/cpa-bootstrap/src/CPA/Bootstrap/CoreModel/: Constant.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/Boot/cpa-bootstrap/test/CPA/Bootstrap/ApplicationBase/: ControlSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/CoreModel/cpa-multiverse/: CHANGELOG.md  cpa-multiverse.cabal
cpa_thesis_appendix_B/05_cpa-fractal/CoreModel/cpa-multiverse/src/CPA/Multiverse/CoreModel/: Constant.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/CoreModel/cpa-multiverse/test/CPA/Multiverse/CoreModel/: TypeSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-request/: CHANGELOG.md  cpa-request.cabal
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-request/src/CPA/Request/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-request/src/CPA/Request/Boot/: Bootstrap.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-request/src/CPA/Request/CoreModel/: Constant.hs  TH.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-request/src/CPA/Request/Interface/: Stdio.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-request/test/CPA/Request/Boot/: BootstrapSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-response/: CHANGELOG.md  cpa-response.cabal
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-response/src/CPA/Response/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-response/src/CPA/Response/Boot/: Bootstrap.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-response/src/CPA/Response/CoreModel/: Constant.hs  TH.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-response/src/CPA/Response/Interface/: Stdio.hs
cpa_thesis_appendix_B/05_cpa-fractal/Interface/cpa-response/test/CPA/Response/Boot/: BootstrapSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-ontological-world/: CHANGELOG.md  LICENSE  cabal.project  cpa-ontological-world.cabal
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-ontological-world/src/CPA/OntologicalWorld/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-ontological-world/src/CPA/OntologicalWorld/CoreModel/: Constant.hs  TH.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-ontological-world/src/CPA/OntologicalWorld/ProjectedContext/: Context.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-ontological-world/test/CPA/OntologicalWorld/ApplicationBase/: ControlSpec.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-semantic-world/: CHANGELOG.md  cpa-semantic-world.cabal
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-semantic-world/src/CPA/SemanticWorld/ApplicationBase/: Control.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-semantic-world/src/CPA/SemanticWorld/CoreModel/: Constant.hs  TH.hs  Type.hs  Utility.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-semantic-world/src/CPA/SemanticWorld/ProjectedContext/: Context.hs
cpa_thesis_appendix_B/05_cpa-fractal/ProjectedContext/cpa-semantic-world/test/CPA/SemanticWorld/ApplicationBase/: ControlSpec.hs
(+19 files in other folders)
