cabal-version:      3.0
name:               cpa-semantic
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lanclaude
maintainer:         xxxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  CPA.Semantic.CoreModel.Type,
                      CPA.Semantic.ProjectedContext.Context,
                      CPA.Semantic.ApplicationBase.Control

    build-depends:    base ^>=4.18.3.0,
                      transformers

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-semantic-test
    import:           warnings
    default-language: Haskell2010

    other-modules:    CPA.Semantic.ApplicationBase.ControlSpec

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs

    build-depends:    base >= 4.18 && < 5,
                      hspec,
                      hspec-discover,
                      cpa-semantic

    build-tool-depends:
      hspec-discover:hspec-discover
