cabal-version:      3.0
name:               cpa-ontological
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lanclaude
maintainer:         xxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  CPA.Ontological.CoreModel.Type,
                      CPA.Ontological.ProjectedContext.Context,
                      CPA.Ontological.ApplicationBase.Control

    build-depends:    base ^>=4.18.3.0,
                      transformers

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-ontological-test
    import:           warnings
    default-language: Haskell2010

    other-modules:    CPA.Ontological.ApplicationBase.ControlSpec

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs

    build-depends:    base >= 4.18 && < 5,
                      hspec,
                      hspec-discover,
                      cpa-ontological

    build-tool-depends:
      hspec-discover:hspec-discover
