cabal-version:      3.0
name:               cpa-fractal-app
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lanclaude
maintainer:         xxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        CPA.Fractal.CoreModel.Type
        CPA.Fractal.CoreModel.TH
        CPA.Fractal.CoreModel.Utility
        CPA.Fractal.CoreModel.Constant
        CPA.Fractal.ProjectedContext.Context
        CPA.Fractal.ApplicationBase.State.Start
        CPA.Fractal.ApplicationBase.State.Semantic
        CPA.Fractal.ApplicationBase.State.Ontological
        CPA.Fractal.ApplicationBase.State.Stop
        CPA.Fractal.ApplicationBase.Control
    build-depends:
        base ^>=4.18.3.0
      , stm
      , conduit
      , monad-logger
      , transformers
      , mtl
      , template-haskell
      , text
      , cpa-multiverse
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-fractal-app-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    CPA.Fractal.ApplicationBase.ControlSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0
      , stm
      , async
      , hspec
      , hspec-discover
      , monad-logger
      , mtl
      , transformers
      , cpa-multiverse
      , cpa-fractal-app
    build-tool-depends:
        hspec-discover:hspec-discover
