cabal-version:      3.0
name:               cpa-multiverse
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lanclaude
maintainer:         xxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        CPA.Multiverse.CoreModel.Type
        CPA.Multiverse.CoreModel.Constant
        CPA.Multiverse.CoreModel.Utility
    build-depends:
        base          ^>=4.18.3.0
      , stm
      , monad-logger
      , fast-logger
      , filepath
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-multiverse-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    CPA.Multiverse.CoreModel.TypeSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0
      , stm
      , hspec
      , cpa-multiverse
    build-tool-depends:
        hspec-discover:hspec-discover
