cabal-version:      3.0
name:               cpa-response
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lanclaude
maintainer:         xxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        CPA.Response.CoreModel.Type
        CPA.Response.CoreModel.TH
        CPA.Response.CoreModel.Utility
        CPA.Response.CoreModel.Constant
        CPA.Response.ApplicationBase.State.Start
        CPA.Response.ApplicationBase.State.Run
        CPA.Response.ApplicationBase.State.Stop
        CPA.Response.ApplicationBase.Control
        CPA.Response.Interface.Stdio
        CPA.Response.Boot.Bootstrap
    build-depends:
        base ^>=4.18.3.0
      , stm
      , conduit
      , monad-logger
      , transformers
      , mtl
      , template-haskell
      , text
      , cpa-multiverse
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-response-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules:    CPA.Response.Boot.BootstrapSpec
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0
      , stm
      , async
      , hspec
      , hspec-discover
      , monad-logger
      , mtl
      , transformers
      , text
      , cpa-multiverse
      , cpa-response
    build-tool-depends:
        hspec-discover:hspec-discover
