cabal-version:      3.0
name:               cpa-ontological-world
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lancluade
maintainer:         xxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        CPA.OntologicalWorld.CoreModel.Type
        CPA.OntologicalWorld.CoreModel.TH
        CPA.OntologicalWorld.CoreModel.Utility
        CPA.OntologicalWorld.CoreModel.Constant
        CPA.OntologicalWorld.ProjectedContext.Context
        CPA.OntologicalWorld.ApplicationBase.State.Start
        CPA.OntologicalWorld.ApplicationBase.State.Run
        CPA.OntologicalWorld.ApplicationBase.State.Stop
        CPA.OntologicalWorld.ApplicationBase.Control
    build-depends:
        base ^>=4.18.3.0
      , stm
      , conduit
      , monad-logger
      , transformers
      , mtl
      , template-haskell
      , text
      , cpa-multiverse
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-ontological-world-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    CPA.OntologicalWorld.ApplicationBase.ControlSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0
      , stm
      , async
      , hspec
      , hspec-discover
      , monad-logger
      , mtl
      , transformers
      , cpa-multiverse
      , cpa-ontological-world
    build-tool-depends:
        hspec-discover:hspec-discover
