cabal-version:      3.0
name:               cpa-semantic-world
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Aska Lanclaude
maintainer:         xxx@gmail.com
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        CPA.SemanticWorld.CoreModel.Type
        CPA.SemanticWorld.CoreModel.TH
        CPA.SemanticWorld.CoreModel.Utility
        CPA.SemanticWorld.CoreModel.Constant
        CPA.SemanticWorld.ProjectedContext.Context
        CPA.SemanticWorld.ApplicationBase.State.Start
        CPA.SemanticWorld.ApplicationBase.State.Run
        CPA.SemanticWorld.ApplicationBase.State.Stop
        CPA.SemanticWorld.ApplicationBase.Control
    build-depends:
        base ^>=4.18.3.0
      , stm
      , conduit
      , monad-logger
      , transformers
      , mtl
      , template-haskell
      , text
      , cpa-multiverse
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite cpa-semantic-world-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    CPA.SemanticWorld.ApplicationBase.ControlSpec
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0
      , stm
      , async
      , hspec
      , hspec-discover
      , monad-logger
      , mtl
      , transformers
      , cpa-multiverse
      , cpa-semantic-world
    build-tool-depends:
        hspec-discover:hspec-discover
